--- a/Problem 3.ipynb
+++ b/Problem 3.ipynb
@@ -28,26 +28,18 @@
     "    X = torch.Tensor(X).float()\n",
     "    N = len(X)\n",
     "    y = torch.Tensor(y).long()\n",
-    "    train_size = int(0.8 * N)\n",
-    "    valid_size = int((N - train_size) / 2.0)\n",
-    "    test_size = N - train_size - valid_size\n",
-    "    train_index, remaining_index = torch.utils.data.random_split(\n",
-    "        np.arange(N), [train_size, N - train_size]\n",
-    "    )\n",
-    "    valid_index, test_index = torch.utils.data.random_split(\n",
-    "        np.arange(N - train_size), [valid_size, test_size]\n",
+    "    train_size = int(0.75 * N)\n",
+    "    valid_size = N - train_size\n",
+    "    train_index, valid_index = torch.utils.data.random_split(\n",
+    "        np.arange(N), [train_size, valid_size]\n",
     "    )\n",
     "    train_dataset = utils.TensorDataset(X[train_index], y[train_index])\n",
     "    valid_dataset = utils.TensorDataset(X[valid_index], y[valid_index])\n",
-    "    test_dataset = utils.TensorDataset(X[test_index], y[test_index])\n",
     "    dataloader = utils.DataLoader(\n",
     "        train_dataset, batch_size=batch_size, shuffle=True, num_workers=2\n",
     "    )\n",
     "    validloader = utils.DataLoader(\n",
     "        valid_dataset, batch_size=batch_size, shuffle=True, num_workers=2\n",
-    "    )\n",
-    "    testloader = utils.DataLoader(\n",
-    "        test_dataset, batch_size=batch_size, shuffle=True, num_workers=2\n",
     "    )\n",
     "    j = 0\n",
     "    train_accs = []\n",
@@ -99,9 +91,8 @@
     "            j += 1\n",
     "\n",
     "        print(\"epoch: {}\".format(net.epoch))\n",
-    "        print(\" [LOSS] TRAIN {} / TEST {}\".format(train_loss, valid_loss))\n",
-    "        print(\" [ACC] TRAIN {} / TEST {}\".format(train_acc, valid_acc))\n",
-    "    print(\"Best test accurcy is\", best_net.evaluate(testloader, criterion))\n",
+    "        print(\" [LOSS] TRAIN {} / VALID {}\".format(train_loss, valid_loss))\n",
+    "        print(\" [ACC] TRAIN {} / VALID {}\".format(train_acc, valid_acc))\n",
     "    return best_model, net.epoch\n",
     "\n",
     "\n",
