--- a/Problem 3.ipynb
+++ b/Problem 3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,6 +191,37 @@
     "        floss = LOSSES / float(COUNTER)\n",
     "        faccuracy = ACCURACY / float(COUNTER)\n",
     "        return floss, faccuracy\n",
+    "    \n",
+    "    def train(self, X, y, epochs, optimizer, criterion, batch_size, lr):\n",
+    "        train_dataset = utils.TensorDataset(X, y)\n",
+    "        dataloader = utils.DataLoader(\n",
+    "            train_dataset, batch_size=batch_size, shuffle=True, num_workers=2\n",
+    "        )\n",
+    "        train_accs = []\n",
+    "        train_losses = []\n",
+    "        for e in epochs:\n",
+    "            net.train_mode()\n",
+    "            for batch in dataloader:\n",
+    "                optimizer.zero_grad()\n",
+    "                X, y = batch\n",
+    "                X = X.view(-1, 3, 64, 64)\n",
+    "                y = y.view(-1)\n",
+    "                X = X.cuda()\n",
+    "                y = y.cuda()\n",
+    "\n",
+    "                loss = criterion(net.forward(X), y)\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
+    "\n",
+    "            net.eval_mode()\n",
+    "            train_loss, train_acc = net.evaluate(dataloader, criterion)\n",
+    "\n",
+    "            train_accs.append(train_acc)\n",
+    "            train_losses.append(train_loss)\n",
+    "\n",
+    "            print(\"epoch: {}\".format(epoch))\n",
+    "            print(\"TRAIN : [LOSS] {} / [ACC] {}\".format(train_loss, train_acc))\n",
+    "        print('Training Done')\n",
     "\n",
     "\n",
     "def create_dataset(cats_path, dogs_path, test_path):\n",
@@ -231,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -249,19 +280,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The network contains 4428930 parameters.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "net = Net(3, 128, 128)\n",
+    "net = Net(3, 32, 128)\n",
     "par = sum(p.numel() for p in net.parameters() if p.requires_grad)\n",
     "\n",
     "print(\"The network contains {} parameters.\".format(par))"
@@ -273,24 +296,14 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch: 1\n",
-      " [LOSS] TRAIN 0.6928768616052694 / VALID 0.6933495293118568\n",
-      " [ACC] TRAIN 0.5015669800984491 / VALID 0.49529905981196237\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size = 64\n",
     "learning_rate = 0.05\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.SGD(net.parameters(), lr=learning_rate)\n",
-    "result, last_epoch = train(net, X, y, optimizer, criterion, batch_size, learning_rate)"
+    "result = train(net, X, y, optimizer, criterion, batch_size, learning_rate)"
    ]
   },
   {
@@ -299,9 +312,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(range(last_epoch), result[\"tloss\"], label='training loss')\n",
-    "plt.plot(range(last_epoch), result[\"vloss\"], label='validation loss')\n",
-    "plt.axvline(x=result['epoch'], label='early stop', color='black')\n",
+    "plt.plot(range(result['final_epoch']), result[\"tloss\"], label='training loss')\n",
+    "plt.plot(range(result['final_epoch']), result[\"vloss\"], label='validation loss')\n",
+    "plt.axvline(x=result['best_epoch'], label='early stop', color='black')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -314,9 +327,9 @@
    },
    "outputs": [],
    "source": [
-    "plt.plot(range(last_epoch), result[\"taccs\"], label='training accuracy')\n",
-    "plt.plot(range(last_epoch), result[\"vaccs\"], label='validation accuracy')\n",
-    "plt.axvline(x=result['epoch'], label='early stop', color='black')\n",
+    "plt.plot(range(result['final_epoch']), result[\"taccs\"], label='training accuracy')\n",
+    "plt.plot(range(result['final_epoch']), result[\"vaccs\"], label='validation accuracy')\n",
+    "plt.axvline(x=result['best_epoch'], label='early stop', color='black')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -327,7 +340,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net.load_state_dict(result['net'])\n",
+    "net = Net(3, 32, 128)\n",
+    "net.train(X, y, result['best_epoch'], optimizer, criterion, batch_size, learning_rate)\n",
     "y = []\n",
     "split = 10\n",
     "step = int(len(submission) / split)\n",
