--- a/Problem 3.ipynb
+++ b/Problem 3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
     "        \"batch_size\": batch_size,\n",
     "        \"lr\": lr,\n",
     "        \"vacc\": best_vacc,\n",
-    "        \"vloss\": best_vloss,\n",
+    "        \"vloss\": valid_losses,\n",
     "        \"taccs\": train_accs,\n",
     "        \"tloss\": train_losses,\n",
     "        \"vaccs\": valid_accs,\n",
@@ -142,15 +142,13 @@
     "            nn.MaxPool2d(2, 2),\n",
     "            nn.ReLU(True),\n",
     "            nn.Conv2d(conv_size, conv_size * 2, 3, 1),\n",
-    "            nn.MaxPool2d(2, 2),\n",
     "            nn.ReLU(True),\n",
-    "            nn.Conv2d(conv_size * 2, conv_size * 4, 3, 1),\n",
+    "            nn.Conv2d(conv_size * 2, conv_size * 2, 3, 1),\n",
     "            nn.ReLU(True),\n",
-    "            nn.Conv2d(conv_size * 4, conv_size * 4, 3, 1),\n",
     "            nn.MaxPool2d(3, 3),\n",
     "            nn.ReLU(True),\n",
     "            Flatten(),\n",
-    "            nn.Linear(conv_size * 3 * 3 * 4, lin_size)).cuda()\n",
+    "            nn.Linear(conv_size * 162, lin_size)).cuda()\n",
     "        self.dropout = nn.Sequential(Dropout()).cuda()\n",
     "        self.lin = nn.Sequential(\n",
     "            nn.ReLU(True),\n",
@@ -262,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -280,11 +278,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The network contains 2712066 parameters.\n"
+     ]
+    }
+   ],
    "source": [
-    "net = Net(3, 32, 128)\n",
+    "net = Net(3, 32, 512)\n",
     "par = sum(p.numel() for p in net.parameters() if p.requires_grad)\n",
     "\n",
     "print(\"The network contains {} parameters.\".format(par))"
@@ -294,12 +300,136 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 1\n",
+      " [LOSS] TRAIN 0.6700874076824693 / VALID 0.6672149954926707\n",
+      " [ACC] TRAIN 0.5871174234866842 / VALID 0.5951190238107226\n",
+      "epoch: 2\n",
+      " [LOSS] TRAIN 0.6690453996799497 / VALID 0.6654292069856919\n",
+      " [ACC] TRAIN 0.5909181836645484 / VALID 0.5985197039646348\n",
+      "epoch: 3\n",
+      " [LOSS] TRAIN 0.6677214782532274 / VALID 0.6640255659741148\n",
+      " [ACC] TRAIN 0.5938521037858796 / VALID 0.5991198239886396\n",
+      "epoch: 4\n",
+      " [LOSS] TRAIN 0.6751243627142126 / VALID 0.6705143414132236\n",
+      " [ACC] TRAIN 0.5832499833578204 / VALID 0.5887177435546714\n",
+      "epoch: 5\n",
+      " [LOSS] TRAIN 0.6826956946507863 / VALID 0.6805772873896984\n",
+      " [ACC] TRAIN 0.5785157031505642 / VALID 0.5789157831924012\n",
+      "epoch: 6\n",
+      " [LOSS] TRAIN 0.6929893692731937 / VALID 0.6902996927982665\n",
+      " [ACC] TRAIN 0.5737147429843596 / VALID 0.5747149430124443\n",
+      "epoch: 7\n",
+      " [LOSS] TRAIN 0.6637925642915207 / VALID 0.6591035415110862\n",
+      " [ACC] TRAIN 0.6040541441899868 / VALID 0.6079215843228251\n",
+      "epoch: 8\n",
+      " [LOSS] TRAIN 0.6728129170612946 / VALID 0.6688992260312719\n",
+      " [ACC] TRAIN 0.592451823725894 / VALID 0.593918783762713\n",
+      "epoch: 9\n",
+      " [LOSS] TRAIN 0.6709201224980421 / VALID 0.6679247444118112\n",
+      " [ACC] TRAIN 0.593251983753926 / VALID 0.5955191038267258\n",
+      "epoch: 10\n",
+      " [LOSS] TRAIN 0.6651956381945322 / VALID 0.6608687886108658\n",
+      " [ACC] TRAIN 0.6025205041405646 / VALID 0.6073214642928586\n",
+      "epoch: 11\n",
+      " [LOSS] TRAIN 0.6608235895605876 / VALID 0.6580164116915523\n",
+      " [ACC] TRAIN 0.6063212642588123 / VALID 0.6135227045468699\n",
+      "epoch: 12\n",
+      " [LOSS] TRAIN 0.6603610083056409 / VALID 0.6567498351316686\n",
+      " [ACC] TRAIN 0.6091885044033101 / VALID 0.6129225845526733\n",
+      "epoch: 13\n",
+      " [LOSS] TRAIN 0.6598595613724885 / VALID 0.6562311495392531\n",
+      " [ACC] TRAIN 0.6101220244068682 / VALID 0.6113222644588522\n",
+      "epoch: 14\n",
+      " [LOSS] TRAIN 0.6600183706613607 / VALID 0.6552560813643021\n",
+      " [ACC] TRAIN 0.609788624419366 / VALID 0.6139227845926813\n",
+      "epoch: 15\n",
+      " [LOSS] TRAIN 0.6773766594155038 / VALID 0.6729899748703746\n",
+      " [ACC] TRAIN 0.5868507035058237 / VALID 0.5901180236106826\n",
+      "epoch: 16\n",
+      " [LOSS] TRAIN 0.7060573844899494 / VALID 0.7029639286478893\n",
+      " [ACC] TRAIN 0.5501767020468125 / VALID 0.5633126625503915\n",
+      "epoch: 17\n",
+      " [LOSS] TRAIN 0.6577792006023186 / VALID 0.6542053654995602\n",
+      " [ACC] TRAIN 0.6119890644954603 / VALID 0.6149229846326894\n",
+      "epoch: 18\n",
+      " [LOSS] TRAIN 0.6584282810031282 / VALID 0.6549871436331982\n",
+      " [ACC] TRAIN 0.6138561045661675 / VALID 0.6159231846458699\n",
+      "epoch: 19\n",
+      " [LOSS] TRAIN 0.6595760911172522 / VALID 0.655527446276666\n",
+      " [ACC] TRAIN 0.6124558245379773 / VALID 0.6155231046328475\n",
+      "epoch: 20\n",
+      " [LOSS] TRAIN 0.6835126368182496 / VALID 0.6787460763994801\n",
+      " [ACC] TRAIN 0.5843835434111117 / VALID 0.5907181436644957\n",
+      "epoch: 21\n",
+      " [LOSS] TRAIN 0.6582842159964383 / VALID 0.6550839810067116\n",
+      " [ACC] TRAIN 0.6127892245274668 / VALID 0.6175235047367101\n",
+      "epoch: 22\n",
+      " [LOSS] TRAIN 0.7023527491980571 / VALID 0.699355679050544\n",
+      " [ACC] TRAIN 0.5587117423882141 / VALID 0.5743148629964412\n",
+      "epoch: 23\n",
+      " [LOSS] TRAIN 0.6711778157852869 / VALID 0.6691416062147862\n",
+      " [ACC] TRAIN 0.5978529039339884 / VALID 0.5981196239486316\n",
+      "epoch: 24\n",
+      " [LOSS] TRAIN 0.6828216939256407 / VALID 0.6786813632348319\n",
+      " [ACC] TRAIN 0.5832499833498715 / VALID 0.5943188637787162\n",
+      "epoch: 25\n",
+      " [LOSS] TRAIN 0.6570317336676271 / VALID 0.6521869896173144\n",
+      " [ACC] TRAIN 0.6158565046700302 / VALID 0.6191238247887996\n",
+      "epoch: 26\n",
+      " [LOSS] TRAIN 0.6706077582384496 / VALID 0.6668790488105747\n",
+      " [ACC] TRAIN 0.6008535040659356 / VALID 0.605321064221785\n",
+      "epoch: 27\n",
+      " [LOSS] TRAIN 0.6952678698010784 / VALID 0.6945609689283476\n",
+      " [ACC] TRAIN 0.5829165833265995 / VALID 0.579915983202601\n",
+      "epoch: 28\n",
+      " [LOSS] TRAIN 0.6600561458333029 / VALID 0.6571571956422\n",
+      " [ACC] TRAIN 0.6139227845588986 / VALID 0.6167233446927805\n",
+      "epoch: 29\n",
+      " [LOSS] TRAIN 0.6648741596625981 / VALID 0.66374644849939\n",
+      " [ACC] TRAIN 0.6087884243833325 / VALID 0.6081216243606349\n",
+      "epoch: 30\n",
+      " [LOSS] TRAIN 0.649812184779447 / VALID 0.6466421178875744\n",
+      " [ACC] TRAIN 0.6239914649835052 / VALID 0.626125225080779\n",
+      "epoch: 31\n",
+      " [LOSS] TRAIN 0.7226836623219941 / VALID 0.7196186380186995\n",
+      " [ACC] TRAIN 0.5702473828118826 / VALID 0.5693138627964012\n",
+      "epoch: 32\n",
+      " [LOSS] TRAIN 0.6727145859668467 / VALID 0.6686147486216832\n",
+      " [ACC] TRAIN 0.600586784047318 / VALID 0.6015203040667738\n",
+      "epoch: 33\n",
+      " [LOSS] TRAIN 0.6588899502000976 / VALID 0.6580246987522161\n",
+      " [ACC] TRAIN 0.6143228645888124 / VALID 0.6147229445948794\n",
+      "epoch: 34\n",
+      " [LOSS] TRAIN 0.6673798829291259 / VALID 0.6650849436134977\n",
+      " [ACC] TRAIN 0.6059211842527451 / VALID 0.6111222244806589\n",
+      "epoch: 35\n",
+      " [LOSS] TRAIN 0.6481040368964373 / VALID 0.6448199745654392\n",
+      " [ACC] TRAIN 0.6241248249709547 / VALID 0.6225245049367502\n",
+      "epoch: 36\n",
+      " [LOSS] TRAIN 0.648393177017177 / VALID 0.6437717662212443\n",
+      " [ACC] TRAIN 0.6263252650848061 / VALID 0.6273254651168653\n",
+      "epoch: 37\n",
+      " [LOSS] TRAIN 0.645573455071047 / VALID 0.6427025143612287\n",
+      " [ACC] TRAIN 0.6279922651435372 / VALID 0.6295259051869979\n",
+      "epoch: 38\n",
+      " [LOSS] TRAIN 0.7265707665525644 / VALID 0.727015693072296\n",
+      " [ACC] TRAIN 0.5485763819748508 / VALID 0.5605121024264458\n",
+      "epoch: 39\n",
+      " [LOSS] TRAIN 0.7208144823900897 / VALID 0.7189603237825337\n",
+      " [ACC] TRAIN 0.5537774221828924 / VALID 0.5641128226002828\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 64\n",
-    "learning_rate = 0.05\n",
+    "learning_rate = 0.005\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.SGD(net.parameters(), lr=learning_rate)\n",
@@ -340,7 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net = Net(3, 32, 128)\n",
+    "net = Net(3, 32, 512)\n",
     "net.train(X, y, result['best_epoch'], optimizer, criterion, batch_size, learning_rate)\n",
     "y = []\n",
     "split = 10\n",
