--- a/Problem 3.ipynb
+++ b/Problem 3.ipynb
@@ -20,11 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(net, X, y, optimizer, criterion, batch_size, lr, p=30):\n",
+    "def train(net, X, y, optimizer, criterion, batch_size, lr, p=15):\n",
     "    X = torch.Tensor(X).float()\n",
     "    N = len(X)\n",
     "    y = torch.Tensor(y).long()\n",
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -308,132 +308,90 @@
      "output_type": "stream",
      "text": [
       "epoch: 1\n",
-      " [LOSS] TRAIN 0.6700874076824693 / VALID 0.6672149954926707\n",
-      " [ACC] TRAIN 0.5871174234866842 / VALID 0.5951190238107226\n",
+      " [LOSS] TRAIN 0.5335018332778608 / VALID 0.547415704906261\n",
+      " [ACC] TRAIN 0.7401480296098957 / VALID 0.7277455491336686\n",
       "epoch: 2\n",
-      " [LOSS] TRAIN 0.6690453996799497 / VALID 0.6654292069856919\n",
-      " [ACC] TRAIN 0.5909181836645484 / VALID 0.5985197039646348\n",
+      " [LOSS] TRAIN 0.5456614338088578 / VALID 0.569288460862329\n",
+      " [ACC] TRAIN 0.7318797092950605 / VALID 0.7113422684656141\n",
       "epoch: 3\n",
-      " [LOSS] TRAIN 0.6677214782532274 / VALID 0.6640255659741148\n",
-      " [ACC] TRAIN 0.5938521037858796 / VALID 0.5991198239886396\n",
+      " [LOSS] TRAIN 0.5529342847458003 / VALID 0.5733003495192142\n",
+      " [ACC] TRAIN 0.7290791492029104 / VALID 0.713542708565555\n",
       "epoch: 4\n",
-      " [LOSS] TRAIN 0.6751243627142126 / VALID 0.6705143414132236\n",
-      " [ACC] TRAIN 0.5832499833578204 / VALID 0.5887177435546714\n",
+      " [LOSS] TRAIN 0.5160418697148154 / VALID 0.5443506056689148\n",
+      " [ACC] TRAIN 0.7503500700418239 / VALID 0.7283456691576734\n",
       "epoch: 5\n",
-      " [LOSS] TRAIN 0.6826956946507863 / VALID 0.6805772873896984\n",
-      " [ACC] TRAIN 0.5785157031505642 / VALID 0.5789157831924012\n",
+      " [LOSS] TRAIN 0.5114465090519763 / VALID 0.5404729131317826\n",
+      " [ACC] TRAIN 0.7541508301779565 / VALID 0.7343468693798364\n",
       "epoch: 6\n",
-      " [LOSS] TRAIN 0.6929893692731937 / VALID 0.6902996927982665\n",
-      " [ACC] TRAIN 0.5737147429843596 / VALID 0.5747149430124443\n",
+      " [LOSS] TRAIN 0.5115420582565203 / VALID 0.5440164247759105\n",
+      " [ACC] TRAIN 0.7530839501432302 / VALID 0.7321464292858572\n",
       "epoch: 7\n",
-      " [LOSS] TRAIN 0.6637925642915207 / VALID 0.6591035415110862\n",
-      " [ACC] TRAIN 0.6040541441899868 / VALID 0.6079215843228251\n",
+      " [LOSS] TRAIN 0.507004536815013 / VALID 0.5451510280495907\n",
+      " [ACC] TRAIN 0.7556844702551999 / VALID 0.7321464293097038\n",
       "epoch: 8\n",
-      " [LOSS] TRAIN 0.6728129170612946 / VALID 0.6688992260312719\n",
-      " [ACC] TRAIN 0.592451823725894 / VALID 0.593918783762713\n",
+      " [LOSS] TRAIN 0.5014519632645604 / VALID 0.5439363739256335\n",
+      " [ACC] TRAIN 0.7576181903365231 / VALID 0.727545509125667\n",
       "epoch: 9\n",
-      " [LOSS] TRAIN 0.6709201224980421 / VALID 0.6679247444118112\n",
-      " [ACC] TRAIN 0.593251983753926 / VALID 0.5955191038267258\n",
+      " [LOSS] TRAIN 0.5025703644302596 / VALID 0.5440031153770847\n",
+      " [ACC] TRAIN 0.7604854304472383 / VALID 0.7319463892897788\n",
       "epoch: 10\n",
-      " [LOSS] TRAIN 0.6651956381945322 / VALID 0.6608687886108658\n",
-      " [ACC] TRAIN 0.6025205041405646 / VALID 0.6073214642928586\n",
+      " [LOSS] TRAIN 0.5058999156513921 / VALID 0.5564286947536525\n",
+      " [ACC] TRAIN 0.7580849503432702 / VALID 0.7239447889935615\n",
       "epoch: 11\n",
-      " [LOSS] TRAIN 0.6608235895605876 / VALID 0.6580164116915523\n",
-      " [ACC] TRAIN 0.6063212642588123 / VALID 0.6135227045468699\n",
+      " [LOSS] TRAIN 0.5181500483069522 / VALID 0.5768341311969193\n",
+      " [ACC] TRAIN 0.7533506701578734 / VALID 0.7143428686094847\n",
       "epoch: 12\n",
-      " [LOSS] TRAIN 0.6603610083056409 / VALID 0.6567498351316686\n",
-      " [ACC] TRAIN 0.6091885044033101 / VALID 0.6129225845526733\n",
+      " [LOSS] TRAIN 0.5517901858007971 / VALID 0.604617188777607\n",
+      " [ACC] TRAIN 0.7280789491430302 / VALID 0.7005401080335276\n",
       "epoch: 13\n",
-      " [LOSS] TRAIN 0.6598595613724885 / VALID 0.6562311495392531\n",
-      " [ACC] TRAIN 0.6101220244068682 / VALID 0.6113222644588522\n",
+      " [LOSS] TRAIN 0.5095846506884283 / VALID 0.5626654179483969\n",
+      " [ACC] TRAIN 0.7560845502672287 / VALID 0.7241448290015631\n",
       "epoch: 14\n",
-      " [LOSS] TRAIN 0.6600183706613607 / VALID 0.6552560813643021\n",
-      " [ACC] TRAIN 0.609788624419366 / VALID 0.6139227845926813\n",
+      " [LOSS] TRAIN 0.4991807574418065 / VALID 0.559842079520154\n",
+      " [ACC] TRAIN 0.7614856304753229 / VALID 0.720344068825686\n",
       "epoch: 15\n",
-      " [LOSS] TRAIN 0.6773766594155038 / VALID 0.6729899748703746\n",
-      " [ACC] TRAIN 0.5868507035058237 / VALID 0.5901180236106826\n",
+      " [LOSS] TRAIN 0.5338739989447245 / VALID 0.5969603077653266\n",
+      " [ACC] TRAIN 0.745682469847171 / VALID 0.7119423885015421\n",
       "epoch: 16\n",
-      " [LOSS] TRAIN 0.7060573844899494 / VALID 0.7029639286478893\n",
-      " [ACC] TRAIN 0.5501767020468125 / VALID 0.5633126625503915\n",
+      " [LOSS] TRAIN 0.4895667908922501 / VALID 0.5624253113202081\n",
+      " [ACC] TRAIN 0.7695539107940798 / VALID 0.7205441088336877\n",
       "epoch: 17\n",
-      " [LOSS] TRAIN 0.6577792006023186 / VALID 0.6542053654995602\n",
-      " [ACC] TRAIN 0.6119890644954603 / VALID 0.6149229846326894\n",
+      " [LOSS] TRAIN 0.5304389648845437 / VALID 0.5998051212737264\n",
+      " [ACC] TRAIN 0.7486830699830928 / VALID 0.7173434686937388\n",
       "epoch: 18\n",
-      " [LOSS] TRAIN 0.6584282810031282 / VALID 0.6549871436331982\n",
-      " [ACC] TRAIN 0.6138561045661675 / VALID 0.6159231846458699\n",
+      " [LOSS] TRAIN 0.5228422927627517 / VALID 0.5920045981260031\n",
+      " [ACC] TRAIN 0.7494165500005087 / VALID 0.7073414683055821\n",
       "epoch: 19\n",
-      " [LOSS] TRAIN 0.6595760911172522 / VALID 0.655527446276666\n",
-      " [ACC] TRAIN 0.6124558245379773 / VALID 0.6155231046328475\n",
+      " [LOSS] TRAIN 0.4892423575346713 / VALID 0.5730591871710294\n",
+      " [ACC] TRAIN 0.7696205908007214 / VALID 0.7143428686094847\n",
       "epoch: 20\n",
-      " [LOSS] TRAIN 0.6835126368182496 / VALID 0.6787460763994801\n",
-      " [ACC] TRAIN 0.5843835434111117 / VALID 0.5907181436644957\n",
-      "epoch: 21\n",
-      " [LOSS] TRAIN 0.6582842159964383 / VALID 0.6550839810067116\n",
-      " [ACC] TRAIN 0.6127892245274668 / VALID 0.6175235047367101\n",
-      "epoch: 22\n",
-      " [LOSS] TRAIN 0.7023527491980571 / VALID 0.699355679050544\n",
-      " [ACC] TRAIN 0.5587117423882141 / VALID 0.5743148629964412\n",
-      "epoch: 23\n",
-      " [LOSS] TRAIN 0.6711778157852869 / VALID 0.6691416062147862\n",
-      " [ACC] TRAIN 0.5978529039339884 / VALID 0.5981196239486316\n",
-      "epoch: 24\n",
-      " [LOSS] TRAIN 0.6828216939256407 / VALID 0.6786813632348319\n",
-      " [ACC] TRAIN 0.5832499833498715 / VALID 0.5943188637787162\n",
-      "epoch: 25\n",
-      " [LOSS] TRAIN 0.6570317336676271 / VALID 0.6521869896173144\n",
-      " [ACC] TRAIN 0.6158565046700302 / VALID 0.6191238247887996\n",
-      "epoch: 26\n",
-      " [LOSS] TRAIN 0.6706077582384496 / VALID 0.6668790488105747\n",
-      " [ACC] TRAIN 0.6008535040659356 / VALID 0.605321064221785\n",
-      "epoch: 27\n",
-      " [LOSS] TRAIN 0.6952678698010784 / VALID 0.6945609689283476\n",
-      " [ACC] TRAIN 0.5829165833265995 / VALID 0.579915983202601\n",
-      "epoch: 28\n",
-      " [LOSS] TRAIN 0.6600561458333029 / VALID 0.6571571956422\n",
-      " [ACC] TRAIN 0.6139227845588986 / VALID 0.6167233446927805\n",
-      "epoch: 29\n",
-      " [LOSS] TRAIN 0.6648741596625981 / VALID 0.66374644849939\n",
-      " [ACC] TRAIN 0.6087884243833325 / VALID 0.6081216243606349\n",
-      "epoch: 30\n",
-      " [LOSS] TRAIN 0.649812184779447 / VALID 0.6466421178875744\n",
-      " [ACC] TRAIN 0.6239914649835052 / VALID 0.626125225080779\n",
-      "epoch: 31\n",
-      " [LOSS] TRAIN 0.7226836623219941 / VALID 0.7196186380186995\n",
-      " [ACC] TRAIN 0.5702473828118826 / VALID 0.5693138627964012\n",
-      "epoch: 32\n",
-      " [LOSS] TRAIN 0.6727145859668467 / VALID 0.6686147486216832\n",
-      " [ACC] TRAIN 0.600586784047318 / VALID 0.6015203040667738\n",
-      "epoch: 33\n",
-      " [LOSS] TRAIN 0.6588899502000976 / VALID 0.6580246987522161\n",
-      " [ACC] TRAIN 0.6143228645888124 / VALID 0.6147229445948794\n",
-      "epoch: 34\n",
-      " [LOSS] TRAIN 0.6673798829291259 / VALID 0.6650849436134977\n",
-      " [ACC] TRAIN 0.6059211842527451 / VALID 0.6111222244806589\n",
-      "epoch: 35\n",
-      " [LOSS] TRAIN 0.6481040368964373 / VALID 0.6448199745654392\n",
-      " [ACC] TRAIN 0.6241248249709547 / VALID 0.6225245049367502\n",
-      "epoch: 36\n",
-      " [LOSS] TRAIN 0.648393177017177 / VALID 0.6437717662212443\n",
-      " [ACC] TRAIN 0.6263252650848061 / VALID 0.6273254651168653\n",
-      "epoch: 37\n",
-      " [LOSS] TRAIN 0.645573455071047 / VALID 0.6427025143612287\n",
-      " [ACC] TRAIN 0.6279922651435372 / VALID 0.6295259051869979\n",
-      "epoch: 38\n",
-      " [LOSS] TRAIN 0.7265707665525644 / VALID 0.727015693072296\n",
-      " [ACC] TRAIN 0.5485763819748508 / VALID 0.5605121024264458\n",
-      "epoch: 39\n",
-      " [LOSS] TRAIN 0.7208144823900897 / VALID 0.7189603237825337\n",
-      " [ACC] TRAIN 0.5537774221828924 / VALID 0.5641128226002828\n"
+      " [LOSS] TRAIN 0.5628441302464104 / VALID 0.6516175509262238\n",
+      " [ACC] TRAIN 0.7208108288523053 / VALID 0.684536907387438\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'parameters'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-1e5d6d0e2af1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcriterion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCrossEntropyLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlearning_rates\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSGD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_net\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mnew_net\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'net'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'parameters'"
      ]
     }
    ],
    "source": [
-    "batch_size = 64\n",
-    "learning_rate = 0.005\n",
+    "batch_size = 128\n",
+    "learning_rates = [0.01, 0.005, 0.0001, 0.0005]\n",
     "\n",
+    "new_net = net\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.SGD(net.parameters(), lr=learning_rate)\n",
-    "result = train(net, X, y, optimizer, criterion, batch_size, learning_rate)"
+    "for learning_rate in learning_rates:\n",
+    "    optimizer = optim.SGD(new_net.parameters(), lr=learning_rate)\n",
+    "    result = train(new_net, X, y, optimizer, criterion, batch_size, learning_rate)\n",
+    "    new_net.load_state(resul)\n",
+    "    batch_zsize /= 2"
    ]
   },
   {
