--- a/Problem-2-Assignment-1.ipynb
+++ b/Problem-2-Assignment-1.ipynb
@@ -4,31 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem 2 :"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fubraury 17, 2019\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Author:\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Problem 2\n",
+    "\n",
+    "February 17, 2019\n",
+    "\n",
+    "##### Authors:\n",
     "**Dehgan Arthur** :    20088465  \n",
     "**Sghir Hamza**   :    20147626     \n",
-    "**Adrien Mainka** :    20130281  \n",
-    "\n"
+    "**Adrien Mainka** :    20130281  \n"
    ]
   },
   {
