--- a/Problem-3-Assignment-1.ipynb
+++ b/Problem-3-Assignment-1.ipynb
@@ -5,7 +5,13 @@
    "metadata": {},
    "source": [
     "# Problem 3\n",
-    "by Mainka Adrien, Sghir Hamza and Dehgan Arthur"
+    "\n",
+    "February 17, 2019\n",
+    "\n",
+    "##### Authors:\n",
+    "**Dehgan Arthur** :    20088465  \n",
+    "**Sghir Hamza**   :    20147626     \n",
+    "**Adrien Mainka** :    20130281  "
    ]
   },
   {
