--- a/Problem-1-Assignment-1.ipynb
+++ b/Problem-1-Assignment-1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# <center>Problem 1</center>\n",
+    "# <center>Assignment 1</center>\n",
     "\n"
    ]
   },
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <center>Fubraury 17, 2019 </center>\n"
+    " <center>February 17, 2019 </center>\n"
    ]
   },
   {
@@ -27,24 +27,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 1 :"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Author:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Problem 1\n",
+    "\n",
+    "February 17, 2019\n",
+    "\n",
+    "##### Authors:\n",
     "**Dehgan Arthur** :    20088465  \n",
     "**Sghir Hamza**   :    20147626     \n",
-    "**Adrien Mainka** :    20130281  \n",
-    "\n"
+    "**Adrien Mainka** :    20130281  "
    ]
   },
   {
